--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MyWindowController">
@@ -105,14 +104,14 @@
                             </connections>
                         </button>
                     </toolbarItem>
-                    <toolbarItem implicitItemIdentifier="E015C66F-35C1-48EF-8247-E9B1B129EB77" label="Tag" paletteLabel="Tag" image="B2F3762A-292D-4F4E-A73D-335DFA6D9903" selectable="YES" id="55">
+                    <toolbarItem implicitItemIdentifier="E015C66F-35C1-48EF-8247-E9B1B129EB77" label="Tag" paletteLabel="Tag" image="BFE769D2-4313-4F84-B822-C30F5EAFD9DD" selectable="YES" id="55">
                         <nil key="toolTip"/>
                         <size key="minSize" width="19" height="25"/>
                         <size key="maxSize" width="54" height="25"/>
                         <button key="view" id="56">
                             <rect key="frame" x="0.0" y="14" width="46" height="25"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                            <buttonCell key="cell" type="bevel" title="Tag" bezelStyle="regularSquare" image="B2F3762A-292D-4F4E-A73D-335DFA6D9903" imagePosition="left" alignment="left" inset="2" id="57">
+                            <buttonCell key="cell" type="bevel" title="Tag" bezelStyle="regularSquare" image="BFE769D2-4313-4F84-B822-C30F5EAFD9DD" imagePosition="left" alignment="left" inset="2" id="57">
                                 <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
                                 <font key="font" metaFont="system"/>
                             </buttonCell>
@@ -128,7 +127,7 @@
                         <searchField key="view" wantsLayer="YES" verticalHuggingPriority="750" id="60">
                             <rect key="frame" x="0.0" y="14" width="96" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
-                            <searchFieldCell key="cell" selectable="YES" editable="YES" allowsUndo="NO" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="left" placeholderString="file filter" usesSingleLineMode="YES" bezelStyle="round" sendsSearchStringImmediately="YES" maximumRecents="21" recentsAutosaveName="FileSpecSearch" id="61">
+                            <searchFieldCell key="cell" selectable="YES" editable="YES" allowsUndo="NO" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="left" placeholderString="file filter" usesSingleLineMode="YES" bezelStyle="round" sendsSearchStringImmediately="YES" maximumRecents="30" recentsAutosaveName="FileSpecSearch" id="61">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -280,6 +279,12 @@
                     <modifierMask key="keyEquivalentModifierMask" control="YES"/>
                     <connections>
                         <action selector="editTaggedFiles:" target="-2" id="mh0-Zu-gx6"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Batch for tagged Files" keyEquivalent="b" id="6mZ-Pk-H1D">
+                    <modifierMask key="keyEquivalentModifierMask" control="YES"/>
+                    <connections>
+                        <action selector="batchForTaggedFiles:" target="-2" id="qSu-02-bJe"/>
                     </connections>
                 </menuItem>
                 <menuItem title="Reveal in Finder" keyEquivalent="r" id="216">
@@ -501,7 +506,7 @@ CA
         </drawer>
     </objects>
     <resources>
-        <image name="B2F3762A-292D-4F4E-A73D-335DFA6D9903" width="18" height="18">
+        <image name="BFE769D2-4313-4F84-B822-C30F5EAFD9DD" width="18" height="18">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGW1xYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK8QFwcI
 ERYbHCc0NTY3ODk6O0JDRElMT1VYVSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNS
