--- a/TextView.xib
+++ b/TextView.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="TextViewerController">
@@ -26,13 +25,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" id="4" customClass="MyTextView">
-                                <rect key="frame" x="0.0" y="0.0" width="398" height="298"/>
+                                <rect key="frame" x="0.0" y="0.0" width="383" height="283"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="minSize" width="398" height="298"/>
+                                <size key="minSize" width="383" height="283"/>
                                 <size key="maxSize" width="10000000" height="10000000"/>
                                 <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                <size key="minSize" width="398" height="298"/>
+                                <size key="minSize" width="383" height="283"/>
                                 <size key="maxSize" width="10000000" height="10000000"/>
                                 <connections>
                                     <outlet property="delegate" destination="-2" id="14"/>
@@ -42,11 +41,11 @@
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
                     <scroller key="horizontalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="5">
-                        <rect key="frame" x="1" y="283" width="398" height="16"/>
+                        <rect key="frame" x="1" y="284" width="383" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="6">
-                        <rect key="frame" x="383" y="1" width="16" height="298"/>
+                        <rect key="frame" x="384" y="1" width="15" height="283"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
